# Squads

./: README.md
blueberry/: Cargo.toml
blueberry/src/: grid.rs  lib.rs  rect.rs  vec2f.rs  vec3f.rs  vec4f.rs
cherry/: Cargo.toml
cherry/src/: chars.rs  engine.rs  event.rs  graphics.rs  input.rs  lib.rs  terminal.rs  window.rs
cherry/src/graphics/: clip.rs  colour.rs  font.rs  opengl.rs  sprite.rs
cherry/src/graphics/opengl/: index_buffer.rs  layout.rs  program.rs  renderer.rs  shader.rs  texture.rs  vertex_array.rs  vertex_buffer.rs
cherry/src/input/: button.rs  key.rs
cherry/src/terminal/: buffer.rs  tile.rs
ecs_gui/: Cargo.toml
ecs_gui/src/: main.rs
editor/: Cargo.toml
editor/src/: main.rs
editor_web/: editor.html  listbox.js  script.js  style.css
game/: Cargo.toml
game/res/scenarios/: startup.json
game/res/scenarios/dev/: alliances.json  areas.json  connections.json  factions.json  scenario.json  spawns.json  units.json  weapons.json
game/res/scenarios/dev/factions/: germany.json  japan.json
game/res/scenarios/dev/units/: rifleman.json
game/res/scenarios/dev/weapons/: gewehr_43.json  m1_garand.json
game/res/scenarios/natural_selection/: areas.json  connections.json  factions.json  scenario.json  spawns.json  units.json  weapons.json
game/src/: commands.rs  faction.rs  gid.rs  gui.rs  icons.rs  logger.rs  main.rs  scenario.rs  serde.rs  unit.rs  weapon.rs  world.rs
game/src/gui/: commands_menu.rs  info.rs  menu.rs  messages.rs
grid/: Cargo.toml
grid/src/: main.rs
