[package]
name = "game"
version = "0.1.0"
authors = ["Bailey Dakota Johnson <SystematicLoop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cherry]
path = "../cherry"

[dependencies.hecs]
version = "0.3.1"
features = ["hecs-macros"]